# task-manager

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/v1/task/: crud.py  routes.py  schemas.py
db/: database.py
models/: base.py  task.py
modules/: logger.py  middleware.py
tests/: conftest.py  test_tasks.py
